--- a/LZY.SimpleAdmin/Views/_ViewImports.cshtml
+++ b/LZY.SimpleAdmin/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using LZY.SimpleAdmin
 @using LZY.SimpleAdmin.Models
+@using AspNetCorePage;
+@using LZY.Model;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*,Webdiyer.WebControls.MvcPager"
