--- a/LZY.SimpleAdmin/Views/Shared/_Layout.cshtml
+++ b/LZY.SimpleAdmin/Views/Shared/_Layout.cshtml
@@ -13,8 +13,8 @@
     <title>@ViewBag.Title -@(LZY.Code.Configs.GetValue("SiteName") ?? "XX管理系统")</title>
     <!-- ========== Css Files ========== -->
     <link href="~/css/root.css" rel="stylesheet">
-    <link href="~~/css/jquery.validate.Bubble.css" rel="stylesheet" />
-    <link href="~~/css/plugin/toastr/toastr.min.css" rel="stylesheet" />
+    <link href="~/css/jquery.validate.Bubble.css" rel="stylesheet" />
+    <link href="~/css/plugin/toastr/toastr.min.css" rel="stylesheet" />
     @RenderSection("css", false)
 </head>
 <body>
@@ -156,7 +156,7 @@
     <!-- ================================================
     日期选择控件
     ================================================ -->
-    <script src="~~/js/date-range-picker/daterangepicker.js"></script>
+    <script src="~/js/date-range-picker/daterangepicker.js"></script>
 
     <!-- ================================================
     非入侵式Ajax
