--- a/LZY.SimpleAdmin/Views/Para/Index.cshtml
+++ b/LZY.SimpleAdmin/Views/Para/Index.cshtml
@@ -22,15 +22,15 @@
         <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <form asp-action="Index" asp-controller="Para" data-ajax-update="#dataTable" data-ajax-method="GET" data-ajax-complete="onComplate" data-ajax="true" data-ajax-mode="replace"  class="form-inline" id="searchForm">
+                    <form asp-action="Index" asp-controller="Para" method="get"  class="form-inline" id="searchForm">
                         <div class="form-group">
-                            <input class="form-control" value="" name="s" placeholder="参数名称、Code" />
+                            <input class="form-control" value="@System.Web.HttpContext.Current.Request.Query["s"]" name="s" placeholder="参数名称、Code" />
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i>搜索</button>
                         </div>
                         <div class="form-group pull-right">
-                            <a href="@Url.Action("ParaInfo")" class="btn btn-default"><i class="fa fa-plus"></i>创建新参数</a>
+                            <a href="@Url.Action("Info")" class="btn btn-default"><i class="fa fa-plus"></i>创建新参数</a>
                         </div>
                     </form>
                 </div>
@@ -38,7 +38,7 @@
             <div id="dataTable">
                 <partial name="_ListTable" model="Model" />
                 <div class="text-center">
-                    <nav class="pull-right">
+                    <nav class="pull-right"> 
                         @Html.Pager(Model,new PagerOptions
                    {
                        AutoHide = false,
