--- a/LZY.SimpleAdmin/Views/Role/_ListTable.cshtml
+++ b/LZY.SimpleAdmin/Views/Role/_ListTable.cshtml
@@ -1,5 +1,4 @@
-﻿@using Webdiyer.WebControls.Mvc
-@model PagedList<RoleViewModel>
+﻿@model PagedList<t_role>
 <table class="table table-striped table-hover">
     <thead>
         <tr class="text-center">
@@ -18,7 +17,7 @@
                 <td>@row.p_attribute1</td>
                 <td>
                     @Html.ActionLink("编辑", "RoleInfo", new { id = row.p_id }, htmlAttributes: new { @class = "btn btn-default btn-sm" })<text>&nbsp;</text>
-                    @Ajax.ActionLink("删除", "RoleDeleted", new { id = row.p_id }, new AjaxOptions() { Confirm = "确认要删除么？", OnComplete = "onComplate", HttpMethod = "Post" }, htmlAttributes: new { @class = "btn btn-danger btn-sm" }) <text>&nbsp;</text>
+                    <a asp-action="RoleDeleted" asp-route-id="@row.p_id" data-ajax-confirm="确认要删除么？" data-ajax-complete="onComplate" data-ajax="true" data-ajax-method="Post" class="btn btn-danger btn-sm">删除</a><text>&nbsp;</text>
                     @Html.ActionLink("授权", "RoleMenu", "Account", new { id = row.p_id }, htmlAttributes: new { @class = "btn btn-default btn-sm" })
                 </td>
             </tr>
@@ -26,8 +25,3 @@
         }
     </tbody>
 </table>
-<div class="text-center">
-    <nav class="pull-right">
-        @Ajax.Pager(Model, new PagerOptions { AutoHide = false, PageIndexParameterName = "p", ContainerTagName = "ul", CssClass = "pagination", CurrentPagerItemTemplate = "<li class=\"active\"><a href=\"#\">{0}</a></li>", DisabledPagerItemTemplate = "<li class=\"disabled\"><a>{0}</a></li>", PagerItemTemplate = "<li>{0}</li>", Id = "bootstrappager" }, new MvcAjaxOptions { UpdateTargetId = "dataTable", HttpMethod = "Post", DataFormId = "searchForm" })
-    </nav>
-</div>
